[gd_scene load_steps=3 format=3 uid="uid://xtma3rk642h5"]

[ext_resource type="Script" path="res://scripts/health_bar.gd" id="1_raumy"]
[ext_resource type="Texture2D" uid="uid://xnaj3vg55rvv" path="res://assets/spr_settings.png" id="1_tkgdd"]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="HealthBar" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 256.0
offset_bottom = 32.0
script = ExtResource("1_raumy")

[node name="HealthBarFrame" type="ColorRect" parent="HealthBar"]
layout_mode = 0
offset_right = 256.0
offset_bottom = 32.0
color = Color(0, 0, 0, 1)

[node name="HealthBarHealth" type="ColorRect" parent="HealthBar"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 254.0
offset_bottom = 30.0
color = Color(0.686275, 0, 0, 1)

[node name="HealthBarPercentage" type="Label" parent="HealthBar"]
layout_mode = 0
offset_left = 96.0
offset_right = 160.0
offset_bottom = 32.0
theme_override_colors/font_color = Color(1, 1, 1, 0.686275)
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonSettings" type="Button" parent="."]
offset_left = 1112.0
offset_right = 1152.0
offset_bottom = 40.0
mouse_default_cursor_shape = 2
icon = ExtResource("1_tkgdd")
flat = true
icon_alignment = 1
